# arias

./: .gitignore  CMakeLists.txt  Makefile  README.md  arias
audio/: audiogenerator.hpp
common/: AudioGenerator.java  GuitarChordGenerator.java  GuitarTabGenerator.java  ScaleManager.java  audiodriver.hpp  audiogenerator.cpp
common/exceptions/: InvalidIntervalException.java  InvalidNoteException.java  MeasureBeatsExceededException.java  NoteNotInScaleException.java  invalidintervalexception.hpp  invalidnoteexception.hpp  measurebeatsexceededexception.hpp  notenotinscaleexception.hpp
common/scale/: MinorScaleManager.java  scalemanager.hpp
common/types/instrument/guitar/: CMakeLists.txt  Guitar.cpp  GuitarNote.cpp  GuitarString.cpp  guitar.cpp  guitar.hpp  guitarnote.cpp  guitarnote.d  guitarnote.hpp  guitarscale.hpp  guitarstring.cpp  guitarstring.d  guitarstring.hpp
common/types/instrument/guitar/archive/: Guitar.cpp  GuitarScale.cpp  GuitarTab.cpp  GuitarTabMeasure.cpp
common/types/note/: CMakeLists.txt  NoteAudioGenerator.java  NoteInterval.java  NoteLetter.java  NoteLetterType.java  NoteObject.java  note.cpp  note.hpp  noteinterval.cpp  noteinterval.d  noteinterval.hpp  noteletter.cpp  noteletter.d  noteletter.hpp  notelettertype.hpp  noteobject.cpp  noteobject.d  noteobject.hpp  notevalue.cpp  notevalue.d  notevalue.hpp
platform/android/: GenerateMusicActivity.java  GuitarDrawView.java  MainActivity.java  NewMusicKeyActivity.java  New_Music_Activity.java  TabReportActivity.java
platform/linux/: Arias.java  CMakeLists.txt  main.cpp  main.d
platform/windows/: Arias.rc  Arias.sln  Arias.vcxproj  Arias.vcxproj.filters
platform/windows/Arias/: Arias.sln
platform/windows/Arias/Arias/: Arias.cpp  Arias.rc  Arias.vcxproj  Arias.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp
platform/windows/ipch/arias-7ac6b7cd/: arias-db8d145c.ipch
source/audio/: AudioGenerator.java
source/common/exceptions/: invalidintervalexception.h  notenotinscaleexception.h
source/common/scale/: CMakeLists.txt  MajorScaleManager.java  majorscalemanager.cpp  majorscalemanager.h  majorscalemanager.hpp  minorscalemanager.cpp  minorscalemanager.h  minorscalemanager.hpp  scalemanager.cpp  scalemanager.h  scalemanager.hpp
source/common/types/: instrumenttypes.hpp  randominterval.h  randominterval.hpp
source/common/types/chord/: CMakeLists.txt  chord.cpp  chord.h  chord.hpp  chordtype.h  chordtype.hpp
source/common/types/instrument/guitar/: CMakeLists.txt  guitar.cpp  guitar.h  guitar.hpp  guitarnote.cpp  guitarnote.h  guitarnote.hpp  guitarscale.h  guitarstring.cpp  guitarstring.h
source/common/types/note/: CMakeLists.txt  note.cpp  note.h  noteinterval.cpp  noteinterval.h  noteinterval.hpp  noteletter.cpp  noteletter.h  noteletter.hpp  notevalue.cpp  notevalue.h  notevalue.hpp  notevaluetype.hpp
source/platform/android/: GenerateMusicActivity.java  MainActivity.java  NewMusicKeyActivity.java  New_Music_Activity.java  TabReportActivity.java
source/platform/linux/: CMakeLists.txt  main.cpp
source/platform/windows/: ReadMe.txt  Resource.h  stdafx.cpp
test/: CMakeLists.txt  out
test/scale/: testmajorscalemanager.cpp  testminorscalemanager.cpp  testscalemanager.cpp
test/tools/: coverage_report.sh
